# cifar10-classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: run_train.sh
src/: train.py
tests/: test_imports.py
