[project]
name = "cifar10-classifier"
version = "0.1.0"
description = "Reproducible PyTorch CIFAR-10 classifier project"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "tqdm>=4.67.1",
]

